--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,12 +13,10 @@ h2 {
   display: flex;
   justify-content: center;
   margin-left: 24px;
-
 }
 
 .logo span {
   padding-top: 7px;
-
 }
 
 
@@ -43,18 +41,19 @@ header {
 
 nav li {
   display: inline;
-
 }
 
 .banner {
   display: flex;
   background-color: #d8d8d8;
-
 }
 
-.banner img {
+.bannerimg {
+  background-image: url("../../resources/Images/banner.jpg");
+  background-size: cover;
   width: 60%;
-  height: 60%;
+  height: 800px;
+  display: block;
   margin: 32px 40px 32px 24px;
 }
 
@@ -64,7 +63,6 @@ nav li {
   flex-direction: column;
   justify-content: center;
   text-align: left;
-
 }
 
 .bannertext h1 {
@@ -78,7 +76,7 @@ nav li {
   align-items: center;
   color: white;
   background-color: black;
-  width: 315px;
+  width: 500px;
   height: 30px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -87,7 +85,6 @@ nav li {
 
 .info {
   display: flex;
-
 }
 
 .infobigbox {
@@ -107,7 +104,6 @@ nav li {
   width: 100%;
   margin-left: 24px;
   display: block;
-
 }
 
 .infotext h2 {
@@ -125,7 +121,6 @@ nav li {
   margin-left: 50px;
   padding-bottom: 32px;
   text-align: left;
-
 }
 
 .infosmallbox {
@@ -156,14 +151,12 @@ nav li {
 
 .infosmallbox.gray {
   background-color: #d8d8d8;
-
 }
 
 .courses {
   background-color: #d8d8d8;
   display: flex;
   flex-direction: column;
-
 }
 
 .courses h2 {
@@ -178,7 +171,6 @@ nav li {
   flex-wrap: wrap;
   justify-content: center;
   padding-bottom: 32px;
-
 }
 
 .coursesbox {
@@ -281,5 +273,192 @@ footer {
   align-items: center;
   justify-content: space-between;
   padding: 0px 24px;
+}
 
+
+.infotext p {
+  border: 1px solid red;
+}
+/*display:none desktop code*/
+
+
+@media only screen and (min-width: 481px) {
+.headermobile {
+  display: none;
+}
+}
+
+
+/*mobile code*/
+
+@media only screen and (max-width:680px) {
+
+/*header*/
+  header {
+    height: 64px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+  }
+
+  .headermobile {
+    margin: 0px 16px;
+    display: flex;
+  }
+
+  .headermobile img {
+    margin: 0px 35px;
+  }
+
+  header nav, span {
+    display: none;
+  }
+
+/*banner*/
+  .banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bannerimg {
+    background-image: url("../../resources/Images/banner.jpg");
+    background-size: cover;
+    height: 180px;
+    width: 100%;
+    margin: 0;
+  }
+
+  .bannertext {
+    width: 100%;
+    display: flex;
+  }
+
+  .bannertext h1 {
+    margin:32px 0px 32px 16px;
+  }
+
+  .bannertext h3 {
+    margin: 0px 0px 24px 16px;
+  }
+
+  .bannertext h4 {
+    margin: 0px 0px 32px 16px;
+    background-color: darkgray;
+  }
+
+  #startbutton {
+    width: 90%
+  }
+
+/*info*/
+  .info {
+    flex-direction: column;
+  }
+
+  .infobigbox {
+    display: none;
+  }
+
+  .infosmallboxes {
+    width: 90%;
+    margin: 0px 16px 0px 16px;
+  }
+
+  .infosmallbox {
+    flex-direction: column;
+    overflow: hidden;
+  }
+
+.infosmallbox img {
+  margin: 0;
+  width: 100%;
+  height: 200px;
+  padding: 0;
+  object-fit: cover;
+}
+
+.infosmallbox.gray {
+  background-color: white;
+}
+
+.infosmallboxtext {
+  padding: 20px 0px 16px 16px;
+}
+
+.readmore {
+  color: blue;
+}
+
+
+/*courses*/
+.courses {
+  background-color: white;
+}
+
+.coursesboxes {
+  flex-direction: column;
+}
+
+.coursesbox {
+  width: 90%;
+  margin: 4px 16px;
+}
+
+.courses h2 {
+  padding-top: 0;
+}
+
+.coursesbox img, h4 {
+  display: none;
+}
+
+.coursesbox p {
+  display: none;
+}
+
+.coursesboxtext  {
+  background-color: lightgray;
+}
+
+/*thesis*/
+#thesisheadline {
+  padding-top: 0;
+}
+
+.thesis {
+  flex-direction: column;
+}
+
+.thesisbigboxtext {
+  display: none;
+}
+
+.thesissmallboxes {
+  display: none;
+}
+
+.thesisbigbox {
+  width: 100%;
+  margin: 0;
+}
+
+.thesisbigbox video {
+  width: 100%;
+}
+
+/*footer*/
+footer {
+  margin-top: 24px;
+}
+
+footer li {
+  display: none;
+}
+
+footer span {
+  padding: 16px 0px 8px 0px;
+  display: block;
+  font-size: 12px;
+}
 }
